# learning-k8s

./: .gitignore  README.md
.github/workflows/: deploy.yaml
phase-1/: .dockerignore  Dockerfile  README.md  alerts.yaml  argocd-application.yaml  main.py  monitor.yaml  pyproject.toml
phase-1/fastapi-app/: Chart.yaml  values.yaml
phase-1/fastapi-app/templates/: deployment.yaml  ingress.yaml  service.yaml
phase-1/infra/: alb.tf  ec2.tf  ecr.tf  eks.tf  helm.tf  iam.tf  output.tf  provider.tf  security_group.tf  vpc.tf
phase-2/atlas/: .gitignore  README.md
phase-2/atlas/argocd/: root-app.yaml
phase-2/atlas/argocd/apps/: api-service-app.yaml  worker-app.yaml
phase-2/atlas/charts/api-service/: Chart.yaml  values.yaml
phase-2/atlas/charts/api-service/templates/: _helpers.tpl  deployment.yaml  secret.yaml
phase-2/atlas/charts/worker/: values.yaml
phase-2/atlas/charts/worker/templates/: _helpers.tpl  cronjob.yaml  secret.yaml
phase-2/atlas/docs/: e2e-test-runbook.md
phase-2/atlas/services/api-service/: pyproject.toml
phase-2/atlas/services/api-service/app/: dependencies.py  main.py
phase-2/atlas/services/workers/: Dockerfile  main.py  pyproject.toml
phase-2/atlas/terraform/environments/dev/: .terraform.lock.hcl  dev.tfvars.example  main.tf  output.tf  variables.tf
phase-2/atlas/terraform/modules/addons/: argocd.tf  variables.tf
phase-2/atlas/terraform/modules/ecr/: output.tf  variables.tf
phase-2/atlas/terraform/modules/eks/: main.tf  output.tf  variables.tf
phase-2/atlas/terraform/modules/rds/: output.tf  variables.tf
(+30 files in other folders)
